# xarc

./: .gitignore  .hgignore  CMakeLists.txt  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  mingw-build.cmd  mingw-run-cmake.sh  xarc.cbp
doc/ndproj/: Languages.txt  Menu.txt  Topics.txt
include/: xarc.h  xarc.hpp
include/xarc/: extract_helpers.hpp  string_type.hpp  types.inc  xarc_exception.hpp  xchar.h
src/doc/: extending_xarc.txt  introduction.txt  xarc_user_api_c.txt  xarc_user_api_cxx.txt
src/libxarc/: build.h  filesys.h  modules.inc  type_constants.c  type_extensions.c  xarc_base.c  xarc_decompress.c  xarc_decompress.h  xarc_impl.c  xarc_impl.h  xarc_impl_cxx.cpp  xchar.c
src/libxarc/decomp_bz2/: decomp_bz2.c
src/libxarc/decomp_gzip/: decomp_gzip.c
src/libxarc/decomp_lzma/: decomp_lzma.c
src/libxarc/decomp_xz/: decomp_xz.c
src/libxarc/filesys/: filesys_posix.c  filesys_win32.c
src/libxarc/mod_7z/: mod_7z.c
src/libxarc/mod_minizip/: ioapi.c  iowin32.c  mod_minizip.c  unzip.c
src/libxarc/mod_untar/: mod_untar.c
src/xtest/: mingw-unicode.inc  test.c  test_linux.c  xtest.cpp
test/: invalid.tar.lzma  test.tar.bz2
